git-svn-id: http://svn.vdombox.ru/flextools/trunk@3280 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -628,9 +628,9 @@
 	*/
 	]]>
 </mx:Script>
-<mx:HBox width="100%" height="100%"  right="10">
+<mx:HBox width="100%" height="100%"  >
 
-<mx:Canvas id="main"   width="100%" height="100%" backgroundColor="#ffffff" moveEffect="itemsChangeEffect1" >
+<mx:Canvas id="main"   width="100%" height="100%" backgroundColor="#ffffff" >
 
 <!--
 	<mx:ComboBox x="28" y="46" >
@@ -642,9 +642,9 @@
 	</mx:ComboBox>
 -->
 	</mx:Canvas>
-<mx:Canvas right="0"  height="100%" 
+<mx:Canvas  height="100%" 
 		verticalScrollPolicy="auto"  horizontalScrollPolicy="off"   >	
-<mx:VBox verticalGap="10"  top="10" paddingLeft="3">
+<mx:VBox verticalGap="10"  top="10" paddingLeft="3" paddingRight="10">
 
 
 	<containers:ClosablePanel width="100%" title="                Menu" paddingLeft="0" paddingRight="0" 
