git-svn-id: http://svn.vdombox.ru/flextools/trunk@3289 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
+++ b/IDE/Vdom/vdom/components/treeEditor/TreeEditor.mxml
@@ -177,8 +177,8 @@
 		setStartPage();
 		
 		
-		if(_curTree.target != null)
-			_curTree.target.current = true;
+//		if(_curTree.target != null)
+//			_curTree.target.current = true;
 	}
 	
 	private var dX:Number;
@@ -566,7 +566,7 @@
 		
 		_curTree.target = massTreeElements[dataManager.currentPageId];
 		
-		if(_curTree.target != null)	_curTree.target.current = true;
+//		if(_curTree.target != null)	_curTree.target.current = true;
 		
 		setStartPage();
 		
