--- a/IDE/Vdom/vdom/controls/multiLine/MultiLine.mxml
+++ b/IDE/Vdom/vdom/controls/multiLine/MultiLine.mxml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" height="20" width="100" horizontalAlign="right" initialize="initalizeHandler();" verticalAlign="middle">
+<mx:HBox xmlns:mx="http://www.adobe.com/2006/mxml" height="20" width="100" horizontalAlign="right" initialize="initalizeHandler();" verticalAlign="middle" borderStyle="solid" borderColor="#FFFFFF">
 <mx:Script>
 <![CDATA[
+	import mx.validators.ValidationResult;
+	import mx.events.ValidationResultEvent;
+import mx.events.FlexEvent;
 import vdom.events.MultiLineWindowEvent;
 
 private var _value:String;
@@ -35,11 +38,20 @@ private function openWindow():void {
 private function completeHandler(event:MultiLineWindowEvent):void {
 	
 	_value = event.value;
+	dispatchEvent( new FlexEvent( FlexEvent.VALUE_COMMIT ) );
 	//lbl.text = _value;
+}
+override public function validationResultHandler( event : ValidationResultEvent ) : void
+{
+	super.validationResultHandler( event );
+	if( event.type == "valid" )
+		setStyle( "borderColor", "white" );
+	else if( event.type == "ivalid" )
+		setStyle( "borderColor", "red" );
 }
 
 ]]>
 </mx:Script>
 	<mx:Label id="lbl" width="70" text="Multiline"/>
-	<mx:Button label="..." height="20" cornerRadius="0" click="openWindow()" width="22" paddingLeft="2" paddingRight="2"/>
+	<mx:Button label="..." height="19" cornerRadius="0" click="openWindow()" width="22" paddingLeft="2" paddingRight="2"/>
 </mx:HBox>
