--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -11,6 +11,7 @@
 
 	<mx:Script>
 		<![CDATA[
+			import mx.utils.NameUtil;
 			import PowerPack.com.graph.GraphCanvasEvent;
 			import PowerPack.com.managers.ProgressManager;
 			import PowerPack.com.managers.ContextManager;
@@ -461,7 +462,7 @@
 				
 				var newGraph:GraphCanvas = curGraph.clone();
 									
-				newGraph.name = "Copy_Of_" + curGraph.name;
+				newGraph.name = NameUtil.createUniqueName(newGraph);
 				newGraph.label = newGraph.name;
 				newGraph.initial = false;
 
