--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas xmlns:mx="http://www.adobe.com/2006/mxml" creationComplete="creationCompleteHandler()" 
-	xmlns:eventEditor="vdom.components.eventEditor.*" show="showHandler()" hide="hideHandler()">
+	xmlns:eventEditor="vdom.components.eventEditor.*" show="showHandler()" hide="hideHandler()" xmlns:containers="vdom.containers.*">
 	<mx:Metadata>
 		[ResourceBundle("Event")]
 	</mx:Metadata>
 		
 	 <mx:Script>
 	 	<![CDATA[
+	 		import mx.controls.Label;
 	 		import vdom.components.scriptEditor.containers.ServerScripts;
 	 		import mx.binding.utils.ChangeWatcher;
 	 		import mx.core.Application;
@@ -65,6 +66,9 @@
 			[Bindable]
 			public var delet:Class;
 			
+	 			[Bindable]
+   			private var arrAppl: Array = new Array();
+   		
 	 		
 	 		private var linesArray:Array = new Array();
 	 		
@@ -87,6 +91,7 @@
 	 			
 	 			dataManager.addEventListener(DataManagerEvent.GET_APPLICATION_EVENTS_COMPLETE, applicationEvenLoadedHandler);
 	 			dataManager.addEventListener(DataManagerEvent.SET_APPLICATION_EVENTS_COMPLETE, applEventSevedHandler)
+	 			dataManager.addEventListener(DataManagerEvent.PAGE_CHANGED, pageChangeHandler);
 	 			
 	 			btLine.addEventListener(MouseEvent.CLICK, lineClikHandler );
 	 			
@@ -95,6 +100,28 @@
 	 			curContainerID = dataManager.currentPageId;
 	 			curContainerTypeID = dataManager.getTypeByObjectId(curContainerID).Information.ID.toString();
 	 			
+	 			arrAppl = [];
+	 			for each(var lavel:XML in dataManager.listPages )
+				{
+		 			var ID:String = lavel.@ID;
+		 			var strLabel:String =  lavel.Attributes.Attribute.(@Name == "title");
+		 			arrAppl.push({label:strLabel, ID:ID});
+				}
+				
+				function searchIndex():int
+				{
+					var curID:String = dataManager.currentPageId;
+					for(var i:String in arrAppl)
+					{
+//						trace(arrAppl[i].typeID);
+						if (arrAppl[i].ID == curID) 
+							return Number(i);	
+					}
+					return 0;
+				}
+				
+				changeContainer.selectedIndex = searchIndex();
+//				changeTree(dataManager.currentPageId);
 	 		}
 	 		
 	 		private function hideHandler():void
@@ -756,7 +783,7 @@
 			{
 				//trace(xmlToTree.toXMLString());
 				can.removeAllChildren();
-				trace('----From Serve----'+xmlToTree);
+//				trace('----From Serve----'+xmlToTree);
 				
 				// Client Action
 				clientActionsArray = [];		
@@ -882,6 +909,26 @@
 					can.removeChild(btLine);
 			
 			}
+			
+			   [Bindable]
+   			public var selectedAppl:Object; 
+			private function changeContainerHandler(obj:Object):void
+			{
+				selectedAppl = ComboBox(obj).selectedItem;
+//				changeTree(selectedAppl.ID);
+				dataManager.changeCurrentPage(selectedAppl.ID);
+			}
+			
+			private function pageChangeHandler(dmEvt:DataManagerEvent):void
+			{
+				changeTree(dataManager.currentPageId);
+			}
+			
+			private function changeTree(value:String):void
+			{
+				dataManager.currentPageId
+				trace("************************* " + value);
+			}
 	 	]]>
 	 </mx:Script>
 	
@@ -911,14 +958,23 @@
             <mx:Canvas id="can" width="100%" height="100%" 
             		backgroundColor="#E1E1E1"
             	 	dragEnter="dragEnterHandler(event);" 
-    				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF">
-                
-            </mx:Canvas>
+    				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF"/>
              <mx:HBox>
             	<mx:Button id="btSave" label="Save" click="{creatDataToServer()}"/>
 	            <mx:Button label="Revert" click="{revert()}"/>
             </mx:HBox>
         </mx:VBox>
+        
+        <mx:VBox width="250">
+	        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"  rowCount="20" change="{changeContainerHandler(event.target)}" width="100%"/>
+	        <eventEditor:ContainersBranch width="100%" />
+	        <containers:ClosablePanel width="100%">
+	        	
+	        </containers:ClosablePanel>
+	        
+	        <containers:ClosablePanel width="100%"/>
+        </mx:VBox>
+        
 	</mx:HDividedBox>
 		
 
