git-svn-id: http://svn.vdombox.ru/flextools/trunk@3329 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/graphsClasses/AccordionChild.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/graphsClasses/AccordionChild.mxml
@@ -119,11 +119,11 @@
 		]]>
 	</mx:Script>
 			
-	<mx:List width="100%" height="100%" 
+	<mx:List id="lstGraphs"		
+		width="100%" height="100%" 
 		allowMultipleSelection="false" 
 		textAlign="center" 
 		borderStyle="none"
-		id="lstGraphs"		
 		dataProvider="{graphs}"
 		labelField="name"
 		dragEnabled="true"
