--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/panel/Graphs.mxml
@@ -3,6 +3,32 @@
 		initialize="init();"
 		height="100%">
 	
+	<mx:Style>
+        .categoryCtrlBtnStyle { 
+            labelPlacement: bottom; 
+            fontFamily: Arial;
+            fontSize: 9; 
+            textAlign: center; 
+            cornerRadius: 2; 
+            alpha: 0.9; 
+            paddingLeft: 0; 
+            paddingTop: 3; 
+            paddingRight: 0; 
+            paddingBottom: 3; 
+            horizontalGap: 0; 
+            verticalGap: 0; 
+            borderColor: #CCD1D5
+        }
+        .categoryCtrlBarStyle { 
+        	paddingTop: 0;
+        	paddingLeft: 0;
+        	paddingBottom:	0;
+        	paddingRight: 0;
+        	horizontalGap: 1;
+        	horizontalAlign: center
+        }
+    </mx:Style>
+    
 	<mx:XML id="templateXML"></mx:XML>
 	
 	<mx:Metadata>
@@ -126,7 +152,7 @@
 				}
 				
 				selectGraph(null);
-				
+
 				vsViewStack.validateNow();
 				validateNow();
 				
@@ -416,7 +442,23 @@
 				
 				dispatchEvent(new Event(TPL_CHANGED));
 			}
+					
+			private function captionChangedHandler(event:Event):void
+			{
+				for each(var graph:GraphCanvas in AccordionChild(event.target).graphs)
+				{
+					graph.category = event.target.label;
+				}
+				
+				dispatchEvent(new Event(TPL_CHANGED));
+			}	
 			
+			private function onGraphChange(event:GraphCanvasEvent):void
+			{
+				event.stopImmediatePropagation();
+				dispatchEvent(new Event(TPL_CHANGED));			
+			}
+						
 			private function btnNewClickHandler(event:MouseEvent):void
 			{
 				var child:AccordionChild = AccordionChild(graphsAccordion.selectedChild);
@@ -515,22 +557,6 @@
 			{
 				// TODO
 			}	
-					
-			private function captionChangedHandler(event:Event):void
-			{
-				for each(var graph:GraphCanvas in AccordionChild(event.target).graphs)
-				{
-					graph.category = event.target.label;
-				}
-				
-				dispatchEvent(new Event(TPL_CHANGED));
-			}	
-			
-			private function onGraphChange(event:GraphCanvasEvent):void
-			{
-				event.stopImmediatePropagation();
-				dispatchEvent(new Event(TPL_CHANGED));			
-			}	
 			
 		]]>
 	</mx:Script>
@@ -539,12 +565,12 @@
 				
 		<mx:VBox width="100%" height="100%" verticalGap="0">
 		
-			<mx:ControlBar id="ctrlBar" paddingBottom="0" paddingLeft="0" paddingRight="0" paddingTop="0" horizontalGap="1" width="100%" horizontalAlign="center">
-				<mx:Button toolTip="{LanguageManager.sentences.lbl_new}" labelPlacement="bottom" fontFamily="Arial" textAlign="center" cornerRadius="3" alpha="0.9" id="btnNew" width="100%" paddingRight="0" paddingLeft="0" fontSize="9" icon="{ContextManager.addClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
-				<mx:Button toolTip="{LanguageManager.sentences.lbl_rename}" labelPlacement="bottom" fontFamily="Arial" cornerRadius="3" alpha="0.9" id="btnRename" width="100%" textAlign="center" paddingLeft="0" paddingRight="0" fontSize="9" icon="{ContextManager.editClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
-				<mx:Button toolTip="{LanguageManager.sentences.lbl_copy}" labelPlacement="bottom" fontFamily="Arial" cornerRadius="3" alpha="0.9" id="btnCopy" width="100%" textAlign="center" paddingLeft="0" paddingRight="0" fontSize="9" icon="{ContextManager.copyClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
-				<mx:Button toolTip="{LanguageManager.sentences.lbl_delete}" fontFamily="Arial" cornerRadius="3" labelPlacement="bottom" alpha="0.9" id="btnDelete" width="100%" paddingLeft="0" paddingRight="0" textAlign="center" fontSize="9" icon="{ContextManager.deleteClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"/>
-				<mx:Button toolTip="{LanguageManager.sentences.lbl_help}" fontFamily="Arial" cornerRadius="3" labelPlacement="bottom" alpha="0.9" id="btnHelp" width="100%" paddingLeft="0" paddingRight="0" textAlign="center" fontSize="9" icon="{ContextManager.helpClass}" paddingBottom="3" horizontalGap="0" verticalGap="0" paddingTop="3" borderColor="#CCD1D5"
+			<mx:ControlBar id="ctrlBar" width="100%" styleName="categoryCtrlBarStyle">
+				<mx:Button id="btnNew" toolTip="{LanguageManager.sentences.lbl_new}" width="100%" icon="{ContextManager.addClass}" styleName="categoryCtrlBtnStyle"/>
+				<mx:Button id="btnRename" toolTip="{LanguageManager.sentences.lbl_rename}" width="100%" icon="{ContextManager.editClass}" styleName="categoryCtrlBtnStyle"/>
+				<mx:Button id="btnCopy" toolTip="{LanguageManager.sentences.lbl_copy}" width="100%" icon="{ContextManager.copyClass}" styleName="categoryCtrlBtnStyle"/>
+				<mx:Button id="btnDelete" toolTip="{LanguageManager.sentences.lbl_delete}" width="100%" icon="{ContextManager.deleteClass}" styleName="categoryCtrlBtnStyle"/>
+				<mx:Button id="btnHelp" toolTip="{LanguageManager.sentences.lbl_help}" width="100%" icon="{ContextManager.helpClass}" styleName="categoryCtrlBtnStyle"
 					visible="false" includeInLayout="false"/>
 			</mx:ControlBar>
 			
