--- a/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/Vdom/vdom/components/eventEditor/EventEditor.mxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" creationComplete="creationCompleteHandler()" 
-	  backgroundColor="#3d3d3d"
-	xmlns:eventEditor="vdom.components.eventEditor.*" show="showHandler()" hide="hideHandler()" xmlns:containers="vdom.containers.*">
+<mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" 
+	creationComplete="creationCompleteHandler()" 
+	  backgroundColor="#3d3d3d" 
+	xmlns:eventEditor="vdom.components.eventEditor.*" show="showHandler()" 
+	hide="hideHandler()" xmlns:containers="vdom.containers.*">
 	<mx:Metadata>
 		[ResourceBundle("Event")]
 	</mx:Metadata>
@@ -228,8 +230,8 @@
                     if( item.name().toString() == "Object" )
                     	 return; // not what we want
                     
-                    if ( item.@enabled[0] == "false") 		
-                    	return;
+//                    if ( item.@enabled[0] == "false") 		
+//                    	return;
                 }	  
 	                    
 	        	var newElement:*;
@@ -245,7 +247,7 @@
 	        	  {
 	        	  	newElement = new EventEditorEvents(item, dataManager.currentPageId);
 	        	 	
-	        	 	item.@enabled = false;
+//	        	 	item.@enabled = false;
 	        	  
 	        	  	if (eventsArray[newElement.ID])
 	        	  			return;
@@ -981,7 +983,7 @@
 		</mx:VDividedBox>
 		-->
         <mx:VBox id="vBox" width="100%" height="100%"  >
-            <mx:Canvas id="can" width="100%" height="100%" 
+            <mx:Canvas id="can" width="100%" height="100%"
             		backgroundColor="#E1E1E1"
             	 	dragEnter="dragEnterHandler(event);" 
     				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF"/>
@@ -990,11 +992,11 @@
 	            <mx:Button label="Revert" click="{revert()}"/>
             </mx:HBox>
         </mx:VBox>
-	        <mx:VBox  width="250"  verticalGap="10"  top="10" paddingLeft="3" paddingRight="10" paddingTop="10"
-	        		 >
+	        <mx:VBox  width="250" height="{can.height}" verticalGap="10"   paddingLeft="3" paddingRight="10" paddingTop="10"
+	        		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  >
 	        	<mx:Panel title="PAGES" width="100%" color="#FFFFFF">
-			        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"  rowCount="20" change="{changeContainerHandler(event.target)}" 
-			        		color="#000000" width="100%"/>
+			        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"  rowCount="20" 
+			        	change="{changeContainerHandler(event.target)}" 	color="#000000" width="100%"/>
 	        	</mx:Panel>
 		        <eventEditor:ContainersBranch id="containersBranch" width="100%"  title="Objects"/>
 		        
